--- a/ExcelTemplatesLib/ExcelTemplatesLib.csproj
+++ b/ExcelTemplatesLib/ExcelTemplatesLib.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Config.cs" />
     <Compile Include="ExcelTemplatesLib.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Translit.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PluginsMain\PluginsMain.csproj">
